--- a/adl_hw4/index.html
+++ b/adl_hw4/index.html
@@ -29,9 +29,9 @@
   <hr>
   <div>
     <select id="example-select" class="form-control">
-      <option value="example1">Alice's Adventures in Wonderland</option>
-      <option value="example2">Dracula</option>
-      <option value="example3">The Iliad</option>
+      <option value="example1">The Adventures of Sherlock Holmes</option>
+      <option value="example2">Alice's Adventures in Wonderland</option>
+      <option value="example3">Frankenstein</option>
     </select>
   </div>
   <div>
