--- a/adl_hw4/index.html
+++ b/adl_hw4/index.html
@@ -30,7 +30,7 @@
   <div>
     <select id="example-select" class="form-control">
       <option value="example1">The Adventures of Sherlock Holmes</option>
-      <option value="example2">Alice's Adventures in Wonderland</option>
+      <option value="example2">Adventures of Huckleberry Finn</option>
       <option value="example3">Frankenstein</option>
     </select>
   </div>
